Add support of presets, name templates, vers 0.3.0

--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "tvjs-xp",
-  "version": "0.2.3",
+  "version": "0.3.0",
   "description": "Extension pack for trading-vue-js",
   "main": "./dist/tvjs-xp.js",
   "scripts": {
     "compile": "node ./webpack/index-compiler.js",
     "compile-prod": "node ./webpack/index-compiler.js --prod",
     "eslint": "./node_modules/.bin/eslint --ext .js,.vue src",
-    "dev": "webpack serve --config webpack/dev.config.js --mode development --progress --hot",
+    "dev": "webpack serve --config webpack/dev.config.js --mode development --progress --hot --port=$PORT",
     "build": "webpack  --config webpack/build.config.js --mode production --progress"
   },
   "author": "C451",
@@ -60,8 +60,8 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.12.1",
-    "trading-vue-js": "^0.9.0",
-    "tvjs-overlays": "^0.2.1",
+    "trading-vue-js": "^0.10.0",
+    "tvjs-overlays": "^0.3.0",
     "vue": "^2.6.12"
   }
 }
